tc-add mob for index & solutions

--- a/jay/tc/css/style.css
+++ b/jay/tc/css/style.css
@@ -403,6 +403,12 @@ a:hover {
   border-top: 1px solid #AFAFAF;
 }
 
+@media (max-width: 768px) {
+  .top-line {
+    border-top: none;
+  }
+}
+
 .flex-box {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -579,6 +585,19 @@ a:hover {
   width: 100%;
 }
 
+.main-wrapper .mob-show {
+  display: none;
+}
+
+@media (max-width: 768px) {
+  .main-wrapper .mob-show {
+    display: block;
+  }
+  .main-wrapper .mob-none {
+    display: none;
+  }
+}
+
 .main-wrapper .section-wrap {
   padding: 0;
   margin: 0;
@@ -591,6 +610,10 @@ a:hover {
 
 .main-wrapper .section-wrap .block-box .img-box {
   padding: 20px 0;
+}
+
+.main-wrapper .section-wrap .pc-none {
+  display: none;
 }
 
 .main-wrapper .section-wrap .main-title p {
@@ -671,13 +694,112 @@ a:hover {
   position: relative;
 }
 
+.main-wrapper .home-mob-wrap a.arr-btn {
+  position: absolute;
+  top: calc(50% - 22.5px);
+  width: 45px;
+  height: 45px;
+  color: #fff;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  z-index: 1;
+  font-size: 20px;
+}
+
+.main-wrapper .home-mob-wrap a.prev {
+  left: 10px;
+}
+
+.main-wrapper .home-mob-wrap a.next {
+  right: 10px;
+}
+
+.main-wrapper .home-mob-wrap a:hover {
+  background-color: #00AFDE;
+}
+
+.main-wrapper .home-mob-wrap .fixedbox {
+  position: fixed;
+  width: 100%;
+  bottom: 10%;
+  z-index: 5;
+}
+
+.main-wrapper .home-mob-wrap .pos-x {
+  width: 100%;
+  position: relative;
+}
+
 .main-wrapper .home-mob-wrap .detail_list {
   position: absolute;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   bottom: 10px;
 }
 
 .main-wrapper .home-mob-wrap .detail_list .the_detail_box {
+  width: 280px;
+  margin: 0 15px;
   background-color: #fff;
+  border-radius: 18px;
+  -webkit-box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px;
+          box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px;
+}
+
+.main-wrapper .home-mob-wrap .detail_list .the_detail_box .c_line {
+  color: #03BAEB;
+  padding: 12px 20px;
+  border-bottom: 1px solid #CCEBF9;
+}
+
+.main-wrapper .home-mob-wrap .detail_list .the_detail_box .text {
+  padding: 6px 15px 10px 15px;
+  font-size: 14px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.main-wrapper .home-mob-wrap .detail_list .the_detail_box .text h3 {
+  font-size: 12px;
+  -webkit-box-flex: 3;
+      -ms-flex: 3;
+          flex: 3;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.main-wrapper .home-mob-wrap .detail_list .the_detail_box .text .btn {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  padding: 8px 0 0 5px;
+  font-size: 12px;
+}
+
+.main-wrapper .home-mob-wrap .detail_list .the_detail_box .text .btn p {
+  margin: 0;
+}
+
+.main-wrapper .home-mob-wrap .detail_list .the_detail_box .text .btn p a {
+  min-width: initial;
+  padding: 5px 10px;
 }
 
 .main-wrapper .home-mob-wrap .img__3d {
@@ -978,8 +1100,93 @@ a:hover {
   width: 100%;
 }
 
+.main-wrapper .inside-3d-wrap .pc-none {
+  display: none;
+}
+
+.main-wrapper .inside-3d-wrap .mob-show {
+  position: relative;
+  padding: 0;
+}
+
+.main-wrapper .inside-3d-wrap .mob-show .the_detail_box {
+  position: absolute;
+  bottom: 40px;
+  left: 0;
+  width: 100%;
+  z-index: 1;
+  text-align: center;
+}
+
+.main-wrapper .inside-3d-wrap .mob-show .the_detail_box p {
+  display: inline-block;
+  background-color: #fff;
+  border-radius: 18px;
+  padding: 12px 20px;
+  min-width: 180px;
+  color: #03BAEB;
+  text-align: center;
+  -webkit-box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px;
+          box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px;
+}
+
+.main-wrapper .inside-3d-wrap .mob-show .img__3d {
+  width: 100%;
+  position: relative;
+}
+
+.main-wrapper .inside-3d-wrap .mob-show .img__3d a.arr-btn {
+  position: absolute;
+  top: calc(50% - 18px);
+  width: 36px;
+  height: 36px;
+  color: #fff;
+  background-color: #1f4b8ea5;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  z-index: 1;
+}
+
+.main-wrapper .inside-3d-wrap .mob-show .img__3d a.prev {
+  left: 10px;
+}
+
+.main-wrapper .inside-3d-wrap .mob-show .img__3d a.next {
+  right: 10px;
+}
+
+.main-wrapper .inside-3d-wrap .mob-show .img__3d a:hover {
+  background-color: #1f4b8e;
+}
+
+.main-wrapper .inside-3d-wrap .mob-show .img__3d a.no-click {
+  cursor: no-drop;
+  background-color: #51515195;
+}
+
+.main-wrapper .inside-3d-wrap .mob-show .img__3d a.no-click:hover {
+  background-color: #51515195;
+}
+
+.main-wrapper .inside-3d-wrap .mob-show .img-box {
+  padding: 0;
+}
+
+@media (max-width: 768px) {
+  .main-wrapper .inside-3d-wrap .pc-box {
+    display: none;
+  }
+}
+
 .main-wrapper .bg-index {
-  min-height: calc( 100vh - 112px);
+  min-height: calc( 100vh - 118px);
   background: radial-gradient(ellipse at center, #f5f7f8 23%, #a0e9ff 100%);
 }
 
