--- a/jay/tc/css/style.scss
+++ b/jay/tc/css/style.scss
@@ -1175,6 +1175,7 @@ a:hover {
       li{
         flex: 50%;
         padding: 20px;
+        max-width: 50%;
         .a_video{
           width: 100%;
           display: block;
@@ -1191,7 +1192,9 @@ a:hover {
             }
           }
           .video{
+            margin: 0 0 10px 0;
             width: 100%;
+            height: 280px;
           }
         }
       }
@@ -1201,10 +1204,32 @@ a:hover {
       ul li{
         padding:15px 20px;
         flex: 100%;
+        max-width: 100%;
         .a_video {
           padding-bottom: 10px;
           .text-contents {
             padding: 10px 0 0 0;
+          }
+        }
+      }
+    }
+    @media (max-width: 500px){
+      ul li .a_video .video{
+        height: 200px;
+      }
+    }
+    @media (max-width: 450px){
+      ul li {
+        padding: 10px 15px;
+        .a_video {
+          border-radius: 5px;
+          padding: 10px;
+          .video{
+            height: 155px;
+            margin: 0;
+          }
+          .text-contents{
+            padding: 5px 0 0 0;
           }
         }
       }
