--- a/jay/tc/css/style.scss
+++ b/jay/tc/css/style.scss
@@ -465,6 +465,13 @@ a:hover {
       color: #666666;
     }
   }
+  .languageBox{
+    margin-left: 10px;
+    .md-input{
+      height: 35px;
+      line-height: 35px;
+    }
+  }
   .menu {
     padding-left: 20px;
     display: flex;
@@ -1754,12 +1761,18 @@ a:hover {
     }
   }
   .case-wrap{
+    background-color: #f2f2f2;
+    overflow-x: auto;
     .block-box{
       padding: 0;
+      width: 100%;
       max-width: 100%;
       position: relative;
-      height: 808px;
-      background: url(../images/bg_map.png) top center no-repeat #F2F2F2;    
+      // max-width: initial;
+      max-width: 1440px;
+      height: 812px;
+      margin: 0 auto;
+      background: url(../images/bg_map.png) left center no-repeat #F2F2F2;    
     }
     .country_xy {
       position: absolute;
@@ -1835,6 +1848,11 @@ a:hover {
     .mob-show{
       display: none;
     }
+    @media (max-width: 1100px) {
+      .case-list-box {
+        width: 372px;
+      }
+    }
     @media (max-width: 768px){
       .block-box{
         height: initial;
@@ -1844,6 +1862,7 @@ a:hover {
       }
       .case-list-box{
         width: 100%;
+        max-width: 100%;
         position: static;
         .main-title{
           display: none;
